--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -11,6 +11,7 @@
         android:textStyle="bold"
         android:textSize="30sp"
         android:text="Fragment One"
+        android:id="@+id/textViewMessage"
         />
 
 </LinearLayout>
