--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -3,15 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     >
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:id="@+id/listItemTextView"
+        tools:text="Todo label"
+        />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:id="@+id/listItemCheckBox"
+        android:layout_height="wrap_content" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:maxWidth="5dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher_foreground"
         >
-    </TextView>
+
+    </ImageButton>
 
     <Button
         android:padding="0dp"
@@ -19,8 +34,14 @@
         android:layout_height="wrap_content"
         android:text="Delete"
         android:id="@+id/itemDeleteButton"
-        >
+        />
 
-    </Button>
+    <Button
+        android:padding="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toggle"
+        android:id="@+id/itemToggle"
+        />
 
 </LinearLayout>
