--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -20,28 +20,13 @@
         android:layout_height="wrap_content" />
 
     <ImageButton
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="match_parent"
         android:maxWidth="5dp"
-        android:layout_height="wrap_content"
         android:src="@drawable/ic_launcher_foreground"
+        android:id="@+id/itemDeleteButton"
         >
 
     </ImageButton>
-
-    <Button
-        android:padding="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:id="@+id/itemDeleteButton"
-        />
-
-    <Button
-        android:padding="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Toggle"
-        android:id="@+id/itemToggle"
-        />
 
 </LinearLayout>
